# Understand-Your-Document

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
challenge_1A/: Dockerfile  README.md  requirements.txt
challenge_1A/config/: default.yaml
challenge_1A/connecting_the_dots.egg-info/: SOURCES.txt
challenge_1A/scripts/: download_model.py
challenge_1A/src/: serializer.py
challenge_1B/: Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
challenge_1B/Challenge_1b/Collection 1/: challenge1b_output.json
challenge_1B/Challenge_1b/Collection 2/: challenge1b_output.json
challenge_1B/Challenge_1b/Collection 3/: challenge1b_output.json
challenge_1B/challenge_1B.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
challenge_1B/config/: default.yaml
challenge_1B/scripts/: bench.py  docker_run_collections.sh  run_collections.sh
challenge_1B/src/: analyzer.py  cli.py  embedding.py  multi_processor.py  parser.py  serializer.py  utils.py
challenge_1B/tests/integration/: test_round1b.py
challenge_1B/tests/unit/: test_analyzer.py  test_parser.py  test_scoring.py
config/: default.yaml
connecting_the_dots.egg-info/: PKG-INFO  requires.txt
scripts/: bench.py
src/: analyzer.py  cli.py  embedding.py  parser.py  serializer.py  utils.py
src/schema/: output.json
tests/: utils.py
tests/integration/: test_end_to_end.py
tests/unit/: test_analyzer.py  test_parser.py
