[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connecting_the_dots"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pdfplumber>=0.6.0",
    "scikit-learn>=1.2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "pytest>=7.0.0",
    "sentence-transformers>=2.2.2",
    "lark",
    "fpdf",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
